# Videos_downloader

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Dockerfile  Makefile  README.md  ROADMAP.md  SECURITY.md  app.py  docker-compose.yml  export_cookies.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml
docs/: MEJORAS.md  MEJORAS_CHECKLIST.md
frontend/: .env.example  .gitignore  README.md  next.config.ts  package.json
frontend/src/app/: layout.tsx
frontend/src/components/viral-automation/: discover-section.tsx  index.tsx  input-section.tsx  output-section.tsx  processing-history.tsx
frontend/src/lib/: api.ts  constants.ts  format.ts  utils.ts
modules/: analytics.py  auth.py  automation_engine.py  backup_manager.py  config.py  description_generator.py  downloader.py  hashtag_recommender.py  queue_manager.py  subtitle_generator.py  tiktok_discover.py  uploader.py  video_processor.py  viral_detector.py
scripts/: install.bat  install.sh  run.bat  run.sh  start.bat  start_all.bat  start_all.sh  test_discover.py  test_yt.py
tests/: conftest.py  test_api.py  test_downloader.py  test_video_processor.py  test_viral_detector.py
