[project]
name = "videos-downloader"
version = "1.0.0"
description = "Automated viral content pipeline - download, process, and upload videos across platforms"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "brolyroly007", email = "brolyroly007@gmail.com"},
]
keywords = ["video", "downloader", "tiktok", "automation", "viral", "content"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]

[project.urls]
Homepage = "https://github.com/brolyroly007/Videos_downloader"
Repository = "https://github.com/brolyroly007/Videos_downloader"
Issues = "https://github.com/brolyroly007/Videos_downloader/issues"

# ============================================================
# Ruff - Linter & Formatter
# ============================================================
[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults (FastAPI Depends)
    "B905",   # zip without strict (Python 3.8 compat)
    "UP007",  # use X | Y for union (Python 3.8 compat)
]

[tool.ruff.lint.isort]
known-first-party = ["modules"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ============================================================
# Pytest
# ============================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services",
]

# ============================================================
# Build System
# ============================================================
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"
